@@ -1,3 +1,6 @@
+2010-08-23 Dominik Reichardt <dominus@users.sourceforge.net>
+	* Info.plist.in: Only allow OS X 10.6 to run the x86_64 arch of the exult binary
+	
 2010-08-18  Ryan Nunn <colourles@users.sourceforge.net>
 	* audio/Midi.cc, audio/midi_drivers/* : Changed the way how MT32 Sysex data
 	  and timbre loading is handled to improve startup time. Things are now 
